Add connection to twitch IRC chat

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 BOT_USERNAME=
 CHANNEL_NAME=
 OAUTH_TOKEN=
+
+CLIENT_ID=
+CLIENT_SECRET=
+CLIENT_REDIRECT_URI=http://localhost
+CLIENT_RESPONSE_TYPE=token
+CLIENT_SCOPE=
