--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,2 @@
 BOT_USERNAME=
-CHANNEL_NAME=
-OAUTH_TOKEN=
-
-CLIENT_ID=
-CLIENT_SECRET=
-CLIENT_REDIRECT_URI=http://localhost
-CLIENT_RESPONSE_TYPE=token
-CLIENT_SCOPE=
+BOT_PASSWORD=
