--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 CHANNEL_NAME=
-BOT_USERNAME=
 BOT_OAUTH_TOKEN=
 
 BOT_USERNAME=
 BOT_PASSWORD=
+
+IRC_URL=irc://irc.chat.twitch.tv
+IRC_PORT=6667
+IRC_SSL_URL=irc://irc.chat.twitch.tv
+IRC_SSL_PORT=6697
