--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ BOT_OAUTH_TOKEN=
 BOT_USERNAME=
 BOT_PASSWORD=
 
-IRC_URL=irc://irc.chat.twitch.tv
+IRC_URL=irc.chat.twitch.tv
 IRC_PORT=6667
-IRC_SSL_URL=irc://irc.chat.twitch.tv
+IRC_SSL_URL=irc.chat.twitch.tv
 IRC_SSL_PORT=6697
