feat: Refactor APP
* fix: Delete all

* feat: Add more environment fields

* feat: Add godotenv package

* feat: Add main file, loads env variables

* feat: Add default Twitch's IRC url and port

* feat: Add testify package

* feat: Add internal package to run tests

* feat: Add basic IRC connection

* feat: Add basic Connection interface

* feat: Export fields

* feat: Add IRC tests

* fix: Func name

* feat: Add flag to allow graceful shutdown

* feat: Add uber-go/zap package

* feat: Add internal context

* fix: Remove unused code

* feat: Implement Context

* feat: Add error logging for godotenv

* fix: IRC URL

* feat: Implement Context

* feat: Abstract irc reader

* fix: IRC Connection

* feat: Add reconnect logic

* feat: Refactor

* feat: Implement msg via channels

* feat: Add bot details into context

* feat: Add TODO

* feat: Env info into context

* feat: Add message parser

* feat: Implement PingPong

* feat: Add helper to write into net.Conn connection

* feat: Implement Command type

* feat: Abstract message parser

* feat: Implement commands and actions

* feat: Implement command types

* feat: Implement commands !cupido and !signo

* feat: Add helpers

* feat: Implement logging into IRC connections

* fix: Channel connection

* feat: Implement loggin into command

* feat: Cleanup some code

* feat: Abstract blacklist and cupid pairs

* feat: Add Procfile

* feat: Add Dockerfile and heroku.yml

* feat: Implement flag to load env file

* fix: Nil pointer

* feat: Add new cupid pair

* fix: Env flag

* feat: Abstract signos variable

* feat: Remove flag

* fix: Dockerfile and go.mod

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-BOT_USERNAME=
 CHANNEL_NAME=
-OAUTH_TOKEN=
+BOT_OAUTH_TOKEN=
 
-CLIENT_ID=
-CLIENT_SECRET=
-CLIENT_REDIRECT_URI=http://localhost
-CLIENT_RESPONSE_TYPE=token
-CLIENT_SCOPE=
+BOT_USERNAME=
+BOT_PASSWORD=
+
+IRC_URL=irc.chat.twitch.tv
+IRC_PORT=6667
+IRC_SSL_URL=irc.chat.twitch.tv
+IRC_SSL_PORT=6697
