--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,8 @@ services:
       - "8070:8070"
     image: "api"
     container_name: "api"
+    environment:
+      - CHANNEL_NAME=${API_CHANNEL_NAME}
+      - BOT_OAUTH_TOKEN=${API_BOT_OAUTH_TOKEN}
+      - IRC_URL=${API_IRC_URL}
+      - IRC_PORT=${API_IRC_PORT}
