feat: Add postgres and redis env variables

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,15 @@ API_IRC_URL=irc.chat.twitch.tv
 API_IRC_PORT=6667
 API_IRC_SSL_URL=irc.chat.twitch.tv
 API_IRC_SSL_PORT=6697
+
+API_PORT=5000
+PGSQL_HOST=localhost
+PGSQL_PORT=5432
+PGSQL_USER=root
+PGSQL_PASSWORD=root
+PGSQL_DBNAME=project
+PGSQL_NAME=bot-postgres
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_NAME=bot-redis
