fix: Kafka port update

--- a/.docker/kafka/Dockerfile
+++ b/.docker/kafka/Dockerfile
@@ -2,7 +2,7 @@ FROM bitnami/kafka:latest
 
 WORKDIR /
 
-COPY config/server.properties /config/server.properties
+COPY config/ /config/
 COPY bin/setup.sh .
 
 EXPOSE 9092
