fix: Switch Zookeeper and Kafka images

--- a/.docker/kafka/config/server.properties
+++ b/.docker/kafka/config/server.properties
@@ -36,7 +36,8 @@ listeners=PLAINTEXT://127.0.0.1:9092
 advertised.listeners=PLAINTEXT://127.0.0.1:9092
 
 # Maps listener names to security protocols, the default is for them to be the same. See the config documentation for more details
-#listener.security.protocol.map=PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
+listener.security.protocol.map=PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
+#listener.security.protocol.map=PLAINTEXT:PLAINTEXT
 
 # The number of threads that the server uses for receiving requests from the network and sending responses to the network
 num.network.threads=3
