feat: Implement zookeeper and kafka env variables

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-API_CHANNEL_NAME=
+API_CHANNEL_NAME=rafiusky
 API_BOT_OAUTH_TOKEN=
 
-API_BOT_USERNAME=
+API_BOT_USERNAME=rafiuskybot
 API_BOT_PASSWORD=
 
 API_IRC_URL=irc.chat.twitch.tv
@@ -20,3 +20,12 @@ PGSQL_NAME=bot-postgres
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_NAME=bot-redis
+
+ZOOKEEPER_PORT=2181
+ZOOKEEPER_NAME=bot-zookeeper
+ZOOKEEPER_SERVICE=zookeeper
+
+KAFKA_NAME=bot-kafka
+KAFKA_URL=localhost
+KAFKA_PORT=9092
+KAFKA_TOPICS=commands
