--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -1,10 +1,17 @@
 API_PORT=5000
+
+PGSQL_DATA=db
 PGSQL_HOST=localhost
 PGSQL_PORT=5432
 PGSQL_USER=root
 PGSQL_PASSWORD=root
 PGSQL_DBNAME=project
+PGSQL_NAME=bot-postgres
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_NAME=bot-redis
+
+KAFKA_URL=localhost
+KAFKA_PORT=9092
+KAFKA_TOPIC=commands
