feat: Auth env variables

--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -12,6 +12,9 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_NAME=bot-redis
 
+AUTH_URL=localhost
+AUTH_port=8000
+
 KAFKA_URL=localhost
 KAFKA_PORT=9092
 KAFKA_TOPIC=commands
