feat: Add more env fields

--- a/services/message-sender/.env.example
+++ b/services/message-sender/.env.example
@@ -1,4 +1,12 @@
-API_IRC_URL=irc.chat.twitch.tv
-API_IRC_PORT=6667
+APP_URL=localhost
+APP_PORT=8100
+
 BOT_OAUTH_TOKEN=
 BOT_NAME=
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_NAME=bot-redis
+
+API_IRC_URL=irc.chat.twitch.tv
+API_IRC_PORT=6667
