feat: re-structure .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,21 @@
-API_CHANNEL_NAME=rafiusky
-API_BOT_OAUTH_TOKEN=
+# IRC
+IRC_URL=irc.chat.twitch.tv
+IRC_PORT=6667
+IRC_SSL_URL=irc.chat.twitch.tv
+IRC_SSL_PORT=6697
 
-API_BOT_USERNAME=rafiuskybot
-API_BOT_PASSWORD=
-
-API_IRC_URL=irc.chat.twitch.tv
-API_IRC_PORT=6667
-API_IRC_SSL_URL=irc.chat.twitch.tv
-API_IRC_SSL_PORT=6697
-
+# API
 API_PORT=5000
-PGSQL_HOST=localhost
-PGSQL_PORT=5432
-PGSQL_USER=root
-PGSQL_PASSWORD=root
-PGSQL_DBNAME=project
-PGSQL_NAME=bot-postgres
+API_NAME=
 
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_NAME=bot-redis
+API_PGSQL_HOST=localhost
+API_PGSQL_PORT=5432
+API_PGSQL_USER=root
+API_PGSQL_PASSWORD=root
+API_PGSQL_DBNAME=project
+API_PGSQL_NAME=bot-postgres
 
+# Kafka
 ZOOKEEPER_PORT=2181
 ZOOKEEPER_NAME=bot-zookeeper
 ZOOKEEPER_SERVICE=zookeeper
@@ -29,3 +24,36 @@ KAFKA_NAME=bot-kafka
 KAFKA_URL=localhost
 KAFKA_PORT=9092
 KAFKA_TOPICS=commands
+
+# Message Reader
+READER_PORT=5000
+READER_NAME=
+
+READER_BOT_OAUTH_TOKEN=rafiuskybot
+READER_BOT_USERNAME=
+
+READER_REDIS_HOST=localhost
+READER_REDIS_PORT=6379
+READER_REDIS_NAME=bot-redis
+
+# Sender
+SENDER_PORT=5000
+SENDER_NAME=
+
+SENDER_BOT_OAUTH_TOKEN=rafiuskybot
+SENDER_BOT_USERNAME=
+
+# Auth
+AUTH_PORT=5000
+AUTH_NAME=
+
+AUTH_REDIS_HOST=localhost
+AUTH_REDIS_PORT=6379
+AUTH_REDIS_NAME=bot-redis
+
+AUTH_PGSQL_HOST=localhost
+AUTH_PGSQL_PORT=5432
+AUTH_PGSQL_USER=root
+AUTH_PGSQL_PASSWORD=root
+AUTH_PGSQL_DBNAME=project
+AUTH_PGSQL_NAME=bot-postgres
