fix: .env fields

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ IRC_PORT=6667
 IRC_SSL_URL=irc.chat.twitch.tv
 IRC_SSL_PORT=6697
 
+# Config
+IS_DOCKER=true
+
 # API
 API_PORT=5000
 API_NAME=
@@ -13,7 +16,7 @@ API_PGSQL_PORT=5432
 API_PGSQL_USER=root
 API_PGSQL_PASSWORD=root
 API_PGSQL_DBNAME=project
-API_PGSQL_NAME=bot-postgres
+API_PGSQL_NAME=api-postgres
 
 # Kafka
 ZOOKEEPER_PORT=2181
@@ -27,14 +30,16 @@ KAFKA_TOPICS=commands
 
 # Message Reader
 READER_PORT=5000
-READER_NAME=
+READER_NAME=reader
 
 READER_BOT_OAUTH_TOKEN=rafiuskybot
 READER_BOT_USERNAME=
 
 READER_REDIS_HOST=localhost
 READER_REDIS_PORT=6379
-READER_REDIS_NAME=bot-redis
+READER_REDIS_NAME=reader-redis
+READER_REDIS_DB=0
+READER_REDIS_PASSWORD=
 
 # Sender
 SENDER_PORT=5000
@@ -45,11 +50,13 @@ SENDER_BOT_USERNAME=
 
 # Auth
 AUTH_PORT=5000
-AUTH_NAME=
+AUTH_NAME=auth
 
 AUTH_REDIS_HOST=localhost
 AUTH_REDIS_PORT=6379
 AUTH_REDIS_NAME=bot-redis
+AUTH_REDIS_DB=0
+AUTH_REDIS_PASSWORD=
 
 AUTH_PGSQL_HOST=localhost
 AUTH_PGSQL_PORT=5432
@@ -57,3 +64,7 @@ AUTH_PGSQL_USER=root
 AUTH_PGSQL_PASSWORD=root
 AUTH_PGSQL_DBNAME=project
 AUTH_PGSQL_NAME=bot-postgres
+
+# Queue Manager
+QUEUE_MGR_PORT=6000
+QUEUE_MGR_NAME=queue-mgr
